--- a/crates/client/index.html
+++ b/crates/client/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Evster</title>
-  </head>
-  <body id="evster-attach-here">
 
-  </body>
+<head>
+    <title>Evster</title>
+    <style>
+        :root {
+            background-color: black;
+        }
+
+        canvas {
+            padding: 0;
+            margin: auto;
+            display: block;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            border-style: solid;
+            border-color: gray;
+            border-width: 10pt;
+            cursor: none;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="center" id="evster-attach-here">
+
+    </div>
+</body>
+
 </html>
